--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 								
 								
 								<p>
-									Ciao, mi chiamo Sajmir Veliu e sono un programmatore appassionato di tecnologia e innovazione. 
+									Ciao, mi chiamo Sajmir e sono un programmatore appassionato di tecnologia e innovazione. 
 									Mi piace creare soluzioni efficaci e creative per i problemi che affronto nel mio lavoro. 
 									Ho esperienza in vari linguaggi di programmazione, tra cui Java, PHP, Javascript, REACT e tanti altri. 
 									Ho realizzato diversi progetti interessanti sopratutto nel settore Sanatario Nazionale, che puoi vedere nel mio portfolio. 
