--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					<div class='front-person-img' >
 						
 						<!--person's image-->
-						<img src='img/man2.png' alt='Symp' >
+						<img src='img/man2.png' alt='Symp' style="height: 121%;	position: absolute;	top: -5px; right: 98px;" >
 						<!--/person's image-->
 						
 					</div>
