--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
 						<div class='col-md-6 col-md-offset-3' >
 							<div class='section-header text-center' >
 								
-								<h2 class='animate text-over-block' >My Resume</h2>
+								<h2 class='animate text-over-block' >Il Mio Percorso</h2>
 								
 								<!--divider-->
 								<div class='divider-draft center' ></div>
