--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 									
 									<li>
 										<div class='inner' >
-											<h4>Nome</h4>
+											<h4>Nominativo</h4>
 											<p>Sajmir Veliu</p>
 										</div>
 									</li>
@@ -202,7 +202,7 @@
 									<li>
 										<div class='inner' >
 											<h4>Lavoro</h4>
-											<p>Programmatore</p>
+											<p>Sviluppatore SW</p>
 										</div>
 									</li>
 									<li>
