--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
 
 							<div class='timeline-content'>
 
-								<h4>Università di Ferrara</h4>
+								<h4>Università degli Studi di Ferrara</h4>
 								<span>Tirocinio Interno</span>
 
 								<p>
