--- a/index.html
+++ b/index.html
@@ -319,7 +319,8 @@
 							<ul class='footer-social'>
 								<li>
 									<a href='#'>
-										<i class='ion-social-linkedin' href='https://www.linkedin.com/in/sajmir-veliu-4a868819b/'></i>
+										<i class='ion-social-linkedin'
+											href='https://www.linkedin.com/in/sajmir-veliu-4a868819b/'></i>
 									</a>
 								</li>
 							</ul>
@@ -579,7 +580,8 @@
 							<ul class='footer-social'>
 								<li>
 									<a href='#'>
-										<i class='ion-social-linkedin' href='https://www.linkedin.com/in/sajmir-veliu-4a868819b/'></i>
+										<i class='ion-social-linkedin'
+											href='https://www.linkedin.com/in/sajmir-veliu-4a868819b/'></i>
 									</a>
 								</li>
 							</ul>
@@ -634,7 +636,7 @@
 
 								<div class='content'>
 
-									<h4>Analisi</h4>
+									<h4>Gestionale Lavoro</h4>
 
 									<div class="row">
 										<div class="col-md-12">
@@ -685,16 +687,13 @@
 									<div class="row">
 										<div class="col-md-6">
 											<ul>
-												<li>JAVA</li>
+												<li>Java</li>
 												<li>PHP</li>
-												<li>Javascript</li>
-												<li>REACT</li>
-											</ul>
-										</div>
-										<div class="col-md-6">
-											<ul>
-												<li>Git</li>
-												<li>Doker</li>
+												<li>Javascript (JQuery,Ajax)</li>
+												<li>RESTful API</li>
+												<li>ReactJS*</li>
+												<li>Git*</li>
+												<li>Docker*</li>
 											</ul>
 										</div>
 									</div>
@@ -716,7 +715,7 @@
 									<div class="row">
 										<div class="col-md-12">
 											<ul>
-												<li>Oracle DB</li>
+												<li>Oracle Database (PL/SQL)</li>
 												<li>MySQL</li>
 											</ul>
 										</div>
@@ -730,6 +729,9 @@
 
 					</div>
 
+					<div class="row">
+						<div class="col-xs-12 text-right"> <p>* Approfondimento in corso</p></div>
+					</div>
 
 				</div>
 
@@ -859,7 +861,8 @@
 							<ul class='footer-social'>
 								<li>
 									<a href='#'>
-										<i class='ion-social-linkedin' href='https://www.linkedin.com/in/sajmir-veliu-4a868819b/'></i>
+										<i class='ion-social-linkedin'
+											href='https://www.linkedin.com/in/sajmir-veliu-4a868819b/'></i>
 									</a>
 								</li>
 
@@ -1266,7 +1269,8 @@
 							<ul class='footer-social'>
 								<li>
 									<a href='#'>
-										<i class='ion-social-linkedin' href='https://www.linkedin.com/in/sajmir-veliu-4a868819b/'></i>
+										<i class='ion-social-linkedin'
+											href='https://www.linkedin.com/in/sajmir-veliu-4a868819b/'></i>
 									</a>
 								</li>
 							</ul>
