--- a/index.html
+++ b/index.html
@@ -318,9 +318,8 @@
 						<div class='col-xs-6 text-right'>
 							<ul class='footer-social'>
 								<li>
-									<a href='#'>
-										<i class='ion-social-linkedin'
-											href='https://www.linkedin.com/in/sajmir-veliu-4a868819b/'></i>
+									<a href='https://www.linkedin.com/in/sajmir-veliu-4a868819b/'>
+										<i class='ion-social-linkedin'></i>
 									</a>
 								</li>
 							</ul>
@@ -579,9 +578,8 @@
 						<div class='col-xs-6 text-right'>
 							<ul class='footer-social'>
 								<li>
-									<a href='#'>
-										<i class='ion-social-linkedin'
-											href='https://www.linkedin.com/in/sajmir-veliu-4a868819b/'></i>
+									<a href='https://www.linkedin.com/in/sajmir-veliu-4a868819b/'>
+										<i class='ion-social-linkedin'></i>
 									</a>
 								</li>
 							</ul>
@@ -730,7 +728,9 @@
 					</div>
 
 					<div class="row">
-						<div class="col-xs-12 text-right"> <p>* Approfondimento in corso</p></div>
+						<div class="col-xs-12 text-right">
+							<p>* Approfondimento in corso</p>
+						</div>
 					</div>
 
 				</div>
@@ -860,9 +860,8 @@
 						<div class='col-xs-6 text-right'>
 							<ul class='footer-social'>
 								<li>
-									<a href='#'>
-										<i class='ion-social-linkedin'
-											href='https://www.linkedin.com/in/sajmir-veliu-4a868819b/'></i>
+									<a href='https://www.linkedin.com/in/sajmir-veliu-4a868819b/'>
+										<i class='ion-social-linkedin'></i>
 									</a>
 								</li>
 
@@ -1268,9 +1267,8 @@
 						<div class='col-xs-6 text-right'>
 							<ul class='footer-social'>
 								<li>
-									<a href='#'>
-										<i class='ion-social-linkedin'
-											href='https://www.linkedin.com/in/sajmir-veliu-4a868819b/'></i>
+									<a href='https://www.linkedin.com/in/sajmir-veliu-4a868819b/'>
+										<i class='ion-social-linkedin'></i>
 									</a>
 								</li>
 							</ul>
