--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
 									<h4>Coding</h4>
 
 									<div class="row">
-										<div class="col-md-6">
+										<div class="col-md-12">
 											<ul>
 												<li>Java</li>
 												<li>PHP</li>
@@ -729,7 +729,7 @@
 
 					<div class="row">
 						<div class="col-xs-12 text-right">
-							<p>* Approfondimento in corso</p>
+							<p style="font-size: 10px;">* Approfondimento in corso</p>
 						</div>
 					</div>
 
