--- a/index.html
+++ b/index.html
@@ -688,7 +688,7 @@
 												<li>Java</li>
 												<li>PHP</li>
 												<li>Javascript (JQuery,Ajax)</li>
-												<li>RESTful API</li>
+												<li>RESTful API (XML,JSON,HL7,FHIR*)</li>
 												<li>ReactJS*</li>
 												<li>Git*</li>
 												<li>Docker*</li>
