--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 						</li>
 
 						<li>
-							<a href='https://www.linkedin.com/in/sajmir-veliu-4a868819b/'>Contatti</a>
+							<a href='https://www.linkedin.com/in/sajmir-veliu-4a868819b/'>Contatto Linkedin</a>
 						</li>
 
 
