--- a/index.html
+++ b/index.html
@@ -162,11 +162,9 @@
 								vari linguaggi di programmazione, come Java, PHP, Javascript, REACT e altri. Ho
 								partecipato a numerosi progetti stimolanti,
 								soprattutto nel settore sanitario nazionale, che potete visionare sul mio portfolio. Tra
-								questi, vorrei segnalare MYADI (Gestionale Assistenza Domiciliare),
-								CLICCARE (Gestionale Telemedicina) e nuovi progetti in corso. Sono una persona socievole
-								e amichevole, sempre disposta a imparare cose nuove e a lavorare in team. Se vuoi
-								saperne di più sul mio profilo,
-								non esitare a contattarmi. Vi ringrazio per aver visitato il portfolio.
+								questi, vorrei segnalare MyADI (Gestionale Assistenza Domiciliare),
+								ClicCare (Gestionale Telemedicia) e nuovi progetti in corso come MyADI MMG (Gestionale Contratti MMG-ADI), MyADI Regione Lombardia e altri. Sono una persona socievole
+								e amichevole, sempre disposta a imparare cose nuove e a lavorare in team. Se volete saperne di più sul mio profilo non esitare a contattarmi.
 							</p>
 
 							<div class='clearfix'></div>
@@ -928,7 +926,7 @@
 									<div class='caption-inner'>
 
 										<h6>AUSL Bologna - Gestionale Contratti MMG ADI</h6>
-										<h4>MyAdi MMG </h4>
+										<h4>MyADI MMG </h4>
 
 										<ul class='links'>
 
@@ -958,7 +956,7 @@
 									<div class='caption-inner'>
 
 										<h6>Fondazione Teresa Camplani - Gestionale Assistenza Domiciliare</h6>
-										<h4>MyAdi RL </h4>
+										<h4>MyADI RL </h4>
 
 										<ul class='links'>
 
@@ -991,7 +989,7 @@
 									<div class='caption-inner'>
 
 										<h6>AUSL Bologna - Gestionale Assistenza Domiciliare</h6>
-										<h4>MyAdi </h4>
+										<h4>MyADI </h4>
 
 
 										<ul class='links'>
@@ -1025,7 +1023,7 @@
 									<div class='caption-inner'>
 
 										<h6>AUSL Bologna - Gestionale Assistenza Domiciliare</h6>
-										<h4>MyAdi RL </h4>
+										<h4>MyADI RL </h4>
 
 										<ul class='links'>
 
