--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<title>Portfolio Veliu Sajmir</title>
 
 	<!--[if lt IE 9]>
-		  <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
+		  <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></scripfwt>
 		<![endif]-->
 
 	<link rel='stylesheet' type='text/css' href='bootstrap/css/bootstrap.min.css'>
@@ -882,7 +882,7 @@
 
 								<p>
 									Nel portafoglio troviamo alcuni dei miei progetti più interessanti e innovativi,
-									che mostrano le mie abilità e la mia passione per lo sviluppo web.
+									che mostrano le mie abilità e la mia passione per lo sviluppo web e altro.
 								</p>
 
 							</div>
