--- a/index.html
+++ b/index.html
@@ -158,11 +158,11 @@
 								Salve mi chiamo Sajmir e lavoro come sviluppatore software da diversi anni. Mi
 								appassiona tutto ciò che riguarda la tecnologia e l’innovazione,
 								e cerco sempre di applicare le mie conoscenze e le mie competenze per creare soluzioni
-								originali e funzionali. Ho una buona padronanza di
-								vari linguaggi di programmazione, come Java, PHP, Javascript, REACT e altri. Ho
+								originali e funzionali. Ho una ottima padronanza dei
+								vari linguaggi di programmazione, come Java, PHP, Javascript e altri. Ho
 								partecipato a numerosi progetti stimolanti,
 								soprattutto nel settore sanitario nazionale, che potete visionare sul mio portfolio. Tra
-								questi, vorrei segnalare MyADI (Gestionale Assistenza Domiciliare),
+								questi, vorrei segnalare MyADI (Gestionale Assistenza Domiciliare), il modulo di Fatturazione ADI per pazienti Extra AUSL Bologna,
 								ClicCare (Gestionale Telemedicia) e nuovi progetti in corso come MyADI MMG (Gestionale Contratti MMG-ADI), MyADI Regione Lombardia e altri. Sono una persona socievole
 								e amichevole, sempre disposta a imparare cose nuove e a lavorare in team. Se volete saperne di più sul mio profilo non esitare a contattarmi.
 							</p>
