--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 								soprattutto nel settore sanitario nazionale, che potete visionare sul mio portfolio. Tra
 								questi, vorrei segnalare MyADI (Gestionale Assistenza Domiciliare), il modulo di Fatturazione ADI per pazienti Extra AUSL Bologna,
 								ClicCare (Gestionale Telemedicia) e nuovi progetti in corso come MyADI MMG (Gestionale Contratti MMG-ADI), MyADI Regione Lombardia e altri. Sono una persona socievole
-								e amichevole, sempre disposta a imparare cose nuove e a lavorare in team. Se volete saperne di più sul mio profilo non esitare a contattarmi.
+								e amichevole, sempre disposto a imparare argomenti nuovi e a lavorare in team. Se volete saperne di più sul mio profilo non esitare a contattarmi.
 							</p>
 
 							<div class='clearfix'></div>
