--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 
 							</ul>
 
-							<a href='#' class='symp-btn'><i class='ion-ios-download'></i> CV</a>
+							<a href='img/CV_VeliuSajmir.pdf' target="_blank" class='symp-btn'><i class='ion-ios-download'></i> CV</a>
 
 						</div>
 
