--- a/index.html
+++ b/index.html
@@ -956,7 +956,7 @@
 									<div class='caption-inner'>
 
 										<h6>Fondazione Teresa Camplani - Gestionale Assistenza Domiciliare</h6>
-										<h4>MyADI RL </h4>
+										<h4>MyADI RL</h4>
 
 										<ul class='links'>
 
@@ -989,7 +989,7 @@
 									<div class='caption-inner'>
 
 										<h6>AUSL Bologna - Gestionale Assistenza Domiciliare</h6>
-										<h4>MyADI </h4>
+										<h4>MyADI</h4>
 
 
 										<ul class='links'>
@@ -1022,13 +1022,13 @@
 
 									<div class='caption-inner'>
 
-										<h6>AUSL Bologna - Gestionale Assistenza Domiciliare</h6>
-										<h4>MyADI RL </h4>
+										<h6>Regione Lombardia - Sistema Informativo Socio Sanitario</h6>
+										<h4>Autenticazione SISS</h4>
 
 										<ul class='links'>
 
 											<li>
-												<a href='work.html'>
+												<a href='work.html' target="_blank">
 													<i class='ion-ios-plus-empty'></i>
 												</a>
 											</li>
@@ -1055,12 +1055,12 @@
 
 									<div class='caption-inner'>
 
-										<h4>Project Title</h4>
+										<h4>Gestione Fatture ADI</h4>
 
 										<ul class='links'>
 
 											<li>
-												<a href='work.html'>
+												<a href='work.html' target="_blank">
 													<i class='ion-ios-plus-empty'></i>
 												</a>
 											</li>
