--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
 
 							<div class='timeline-content'>
 
-								<h4>Stabilimento Ravenna</h4>
+								<h4>Stabilimento Balneare</h4>
 								<span>Bagnino</span>
 
 								<p>
