Rimozione descrizione ADI

--- a/index.html
+++ b/index.html
@@ -1055,7 +1055,7 @@
 
 									<div class='caption-inner'>
 
-										<h4>Gestione Fatture ADI</h4>
+										<h4>Gestione Fatture</h4>
 
 										<ul class='links'>
 
