--- a/index.html
+++ b/index.html
@@ -604,51 +604,6 @@
 
 					<div class='row'>
 
-						<div class='col-md-3'>
-							<div class='service'>
-								<div class='icon'>
-									<i class='ion-ios-lightbulb'></i>
-								</div>
-
-								<div class='content'>
-
-									<h4>Gestionale Lavoro</h4>
-
-									<div>
-										<div class="col-md-12 text-left">
-											<ul>
-												<li>Wrike</li>
-											</ul>
-										</div>
-									</div>
-
-								</div>
-							</div>
-						</div>
-
-						<div class='col-md-3'>
-							<div class='service'>
-								<div class='icon'>
-									<i class='ion-ios-monitor'></i>
-								</div>
-
-								<div class='content'>
-
-									<h4>Web Design</h4>
-
-									<div>
-										<div class="col-md-12 text-left">
-											<ul>
-												<li>Figma*</li>
-												<li>Bootstrap</li>
-											</ul>
-										</div>
-									</div>
-
-								</div>
-							</div>
-						</div>
-
 
 						<div class='col-md-3'>
 							<div class='service'>
@@ -666,10 +621,10 @@
 												<li>Java</li>
 												<li>PHP</li>
 												<li>Javascript (JQuery,Ajax)</li>
-												<li>RESTful API (XML,JSON,HL7,FHIR*)</li>
-												<li>ReactJS*</li>
-												<li>Git*</li>
-												<li>Docker*</li>
+												<li>RESTful API (XML,JSON,HL7,FHIR)</li>
+												<li>ReactJS</li>
+												<li>Git</li>
+												<li>Docker</li>
 											</ul>
 										</div>
 									</div>
@@ -677,6 +632,7 @@
 								</div>
 							</div>
 						</div>
+
 
 						<div class='col-md-3'>
 							<div class='service'>
@@ -701,15 +657,54 @@
 							</div>
 						</div>
 
+						<div class='col-md-3'>
+							<div class='service'>
+								<div class='icon'>
+									<i class='ion-ios-monitor'></i>
+								</div>
 
+								<div class='content'>
 
-					</div>
+									<h4>Web Design</h4>
 
-					<div class="row">
-						<div class="col-xs-12 text-right">
-							<p style="font-size: 10px;">*In approfondimento</p>
+									<div>
+										<div class="col-md-12 text-left">
+											<ul>
+												<li>Figma</li>
+												<li>Bootstrap</li>
+											</ul>
+										</div>
+									</div>
+
+								</div>
+							</div>
 						</div>
+
+						<div class='col-md-3'>
+							<div class='service'>
+								<div class='icon'>
+									<i class='ion-ios-lightbulb'></i>
+								</div>
+
+								<div class='content'>
+
+									<h4>Gestionale Lavoro</h4>
+
+									<div>
+										<div class="col-md-12 text-left">
+											<ul>
+												<li>Wrike</li>
+											</ul>
+										</div>
+									</div>
+
+								</div>
+							</div>
+						</div>
+
+
 					</div>
+
 
 				</div>
 
