--- a/index.html
+++ b/index.html
@@ -725,7 +725,8 @@
 
 				<div style="text-align: center;">
 
-					<div class='col-md-3'>
+					<div class='col-md-1'></div>
+					<div class='col-md-2'>
 
 						<div class='process'>
 
@@ -814,6 +815,7 @@
 						</div>
 
 					</div>
+					<div class='col-md-1'></div>
 
 
 
