--- a/index.html
+++ b/index.html
@@ -878,7 +878,7 @@
 								<!--/divider-->
 
 								<p>
-									Nel portafoglio troviamo alcuni dei miei progetti più interessanti e innovativi,
+									Nel portfolio troviamo alcuni dei miei progetti più interessanti e innovativi,
 									che mostrano le mie abilità e la mia passione per lo sviluppo web e altro.
 								</p>
 
