--- a/index.html
+++ b/index.html
@@ -879,7 +879,7 @@
 
 								<p>
 									Nel portfolio troviamo alcuni dei miei progetti più interessanti e innovativi,
-									che mostrano le mie abilità e la mia passione per lo sviluppo web e altro.
+									che mostrano le mie abilità e la mia passione per lo sviluppo web e non solo.
 								</p>
 
 							</div>
