--- a/index.html
+++ b/index.html
@@ -621,7 +621,8 @@
 												<li>Java</li>
 												<li>PHP</li>
 												<li>Javascript (JQuery,Ajax)</li>
-												<li>RESTful API (XML,JSON,HL7,FHIR)</li>
+												<li>RESTful API (XML,JSON)</li>
+												<li>HL7,FHIR</li>
 												<li>ReactJS</li>
 												<li>Git</li>
 												<li>Docker</li>
