--- a/index.html
+++ b/index.html
@@ -491,10 +491,10 @@
 							<div class='hobby'>
 
 								<div class='icon'>
-									<i class='ion-ios-musical-notes'></i>
+									<i class='ion-ios-body'></i>
 								</div>
 
-								<h4>Musica</h4>
+								<h4>Sport</h4>
 
 							</div>
 
