--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
 									<i class='ion-ios-game-controller-b'></i>
 								</div>
 
-								<h4>Giocare</h4>
+								<h4>Games</h4>
 
 							</div>
 
