Cambio Percorso Cartelle

--- a/index.html
+++ b/index.html
@@ -929,7 +929,7 @@
 										<ul class='links'>
 
 											<li>
-												<a href='work.html' target="_blank">
+												<a href='lavori/work.html' target="_blank">
 													<i class='ion-ios-plus-empty'></i>
 												</a>
 											</li>
@@ -959,7 +959,7 @@
 										<ul class='links'>
 
 											<li>
-												<a href='work.html' target="_blank">
+												<a href='lavori/work.html' target="_blank">
 													<i class='ion-ios-plus-empty'></i>
 												</a>
 											</li>
@@ -993,7 +993,7 @@
 										<ul class='links'>
 
 											<li>
-												<a href='work.html' target="_blank">
+												<a href='lavori/work.html' target="_blank">
 													<i class='ion-ios-plus-empty'></i>
 												</a>
 											</li>
@@ -1026,7 +1026,7 @@
 										<ul class='links'>
 
 											<li>
-												<a href='work.html' target="_blank">
+												<a href='lavori/work.html' target="_blank">
 													<i class='ion-ios-plus-empty'></i>
 												</a>
 											</li>
@@ -1058,7 +1058,7 @@
 										<ul class='links'>
 
 											<li>
-												<a href='work.html' target="_blank">
+												<a href='lavori/work.html' target="_blank">
 													<i class='ion-ios-plus-empty'></i>
 												</a>
 											</li>
@@ -1090,7 +1090,7 @@
 										<ul class='links'>
 
 											<li>
-												<a href='work.html'>
+												<a href='lavori/work.html'>
 													<i class='ion-ios-plus-empty'></i>
 												</a>
 											</li>
@@ -1125,7 +1125,7 @@
 										<ul class='links'>
 
 											<li>
-												<a href='work.html'>
+												<a href='lavori/work.html'>
 													<i class='ion-ios-plus-empty'></i>
 												</a>
 											</li>
@@ -1160,7 +1160,7 @@
 										<ul class='links'>
 
 											<li>
-												<a href='work.html'>
+												<a href='lavori/work.html'>
 													<i class='ion-ios-plus-empty'></i>
 												</a>
 											</li>
@@ -1195,7 +1195,7 @@
 										<ul class='links'>
 
 											<li>
-												<a href='work.html'>
+												<a href='lavori/work.html'>
 													<i class='ion-ios-plus-empty'></i>
 												</a>
 											</li>
@@ -1230,7 +1230,7 @@
 										<ul class='links'>
 
 											<li>
-												<a href='work.html'>
+												<a href='lavori/work.html'>
 													<i class='ion-ios-plus-empty'></i>
 												</a>
 											</li>
@@ -1265,7 +1265,7 @@
 										<ul class='links'>
 
 											<li>
-												<a href='work.html'>
+												<a href='lavori/work.html'>
 													<i class='ion-ios-plus-empty'></i>
 												</a>
 											</li>
