--- a/index.html
+++ b/index.html
@@ -2,17 +2,13 @@
 <html class='no-js'>
 
 <head>
+
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-
 
 	<title>Portfolio Veliu Sajmir</title>
-
-	<!--[if lt IE 9]>
-		  <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></scripfwt>
-		<![endif]-->
+	<link rel="icon" type="images/x-icon" href="img/icons8-portfolio-80.png" />
 
 	<link rel='stylesheet' type='text/css' href='bootstrap/css/bootstrap.min.css'>
 	<link rel='stylesheet' type='text/css' href='css/ionicons.min.css'>
@@ -23,7 +19,6 @@
 	<link rel='stylesheet' type='text/css' href='css/magnific-popup.css'>
 	<link rel='stylesheet' type='text/css' href='css/style.css'>
 	<link rel='stylesheet' type='text/css' href='css/color-default.css'>
-
 
 </head>
 
