--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
 							</ul>
 
-							<a href='img/CV_VeliuSajmir.pdf' target="_blank" class='symp-btn'><i class='ion-ios-download'></i> Scarica CV</a>
+							<a href='img/VELIU_SAJMIR_CV.pdf' target="_blank" class='symp-btn'><i class='ion-ios-download'></i> Scarica CV</a>
 
 						</div>
 
