--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
 				<div class='front-person-img'>
 
 					<!--person's image-->
-					<img src='img/man2.png' alt='Symp'
-						style="height: 100%;	position: absolute;	top: -11px; right: 60px; max-width: max-content!important;">
+					<img src='img/man2.png' alt='Symp' class='img-portfolio'>
 					<!--/person's image-->
 
 				</div>
